--- a/Bootsrap Tutorial/index.html
+++ b/Bootsrap Tutorial/index.html
@@ -11,12 +11,19 @@
     />
     <title>Bootstrap Crash Lesson</title>
   </head>
-  <body>
-    <h1>Bootstrap Crash Lesson</h1>
-    <h2>Bootstrap Crash Lesson</h2>
-    <h3>Bootstrap Crash Lesson</h3>
 
-    <button class="btn btn-danger">Me</button>
+  <body>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-sm-8 bg-black">col-sm-8</div>
+        <div class="col-sm-4 bg-danger">col-sm-4</div>
+      </div>
+      <div class="row">
+        <div class="col-sm bg-primary">col-sm</div>
+        <div class="col-sm bg-info">col-sm</div>
+        <div class="col-sm bg-warning">col-sm</div>
+      </div>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
