--- a/Bootsrap Tutorial/index.html
+++ b/Bootsrap Tutorial/index.html
@@ -9,10 +9,153 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
     <title>Bootstrap Crash Lesson</title>
   </head>
 
-  <body>
+  <body class="bg-light">
+    <!-- Top Section  -->
+    <section class="bg-white">
+      <div class="container-fluid py-3">
+        <div class="d-flex flex-column align-items-center">
+          <div class="d-flex justify-content-center align-items-center gap-2">
+            <span class="text-warning fs-5"
+              ><i class="bi bi-star-fill"></i
+            ></span>
+            <h2 class="text-primary">4Ts - The Dreamer</h2>
+            <span class="text-warning fs-5"
+              ><i class="bi bi-star-fill"></i
+            ></span>
+          </div>
+          <div class="d-flex justify-content-center gap-2">
+            <span class="text-primary"
+              ><i class="bi bi-chat-quote-fill"></i
+            ></span>
+            <small class="text-body-secondary"
+              >"Motivation is my second name"</small
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Image and About me -->
+    <section class="my-5">
+      <div class="container">
+        <div class="row gy-5 justify-content-center">
+          <div class="col-10 col-md-4 bg-white py-3 rounded-4 shadow-sm">
+            <div
+              class="d-flex flex-column justify-content-center align-items-center text-center"
+            >
+              <div
+                class="d-flex justify-content-center align-items-center gap-2 mb-2"
+              >
+                <span class="text-primary"
+                  ><i class="bi bi-person-circle fs-4"></i
+                ></span>
+                <p class="fw-semibold mb-0 fs-3">My Pretty Face</p>
+              </div>
+
+              <div style="max-width: 300px">
+                <img
+                  class="img-fluid rounded"
+                  src="./assets/pic.jpg"
+                  alt="Profile photo"
+                />
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-10 col-md-4 offset-md-1 bg-white py-3 rounded-4 shadow-sm"
+          >
+            <!-- About me  -->
+            <div class="d-flex align-items-center gap-2 mb-2">
+              <span class="text-primary"
+                ><i class="bi bi-person-raised-hand fs-4"></i
+              ></span>
+              <p class="fw-semibold fs-3 mb-0">About Me</p>
+            </div>
+
+            <!-- I love these -->
+            <div class="d-flex flex-column gap-2">
+              <div class="d-flex flex-column gap-3">
+                <div
+                  style="width: 95%"
+                  class="d-flex gap-2 align-items-center p-2 bg-light border border-secondary border-opacity-10 rounded"
+                >
+                  <div
+                    class="position-relative bg-primary rounded-circle"
+                    style="width: 40px; height: 40px"
+                  >
+                    <span
+                      class="position-absolute top-50 start-50 translate-middle"
+                      ><i class="bi bi-code-slash text-white"></i
+                    ></span>
+                  </div>
+
+                  <div class="d-flex flex-column">
+                    <p class="mb-0 fw-semibold">I love Code</p>
+                    <p class="mb-0 fw-6 text-muted">
+                      Passionate about creating elegant solutions
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="d-flex flex-column gap-3">
+                <div
+                  style="width: 95%"
+                  class="d-flex gap-2 align-items-center p-2 bg-light border border-secondary border-opacity-10 rounded"
+                >
+                  <div
+                    class="position-relative bg-success rounded-circle"
+                    style="width: 40px; height: 40px"
+                  >
+                    <span
+                      class="position-absolute top-50 start-50 translate-middle"
+                      ><i class="bi bi-rocket-takeoff-fill text-white"></i
+                    ></span>
+                  </div>
+
+                  <div class="d-flex flex-column">
+                    <p class="mb-0 fw-semibold">Building Dreams</p>
+                    <p class="mb-0 fw-6 text-muted">
+                      Turning ideas into reality through technology
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="d-flex flex-column gap-3">
+                <div
+                  style="width: 95%"
+                  class="d-flex gap-2 align-items-center p-2 bg-light border border-secondary border-opacity-10 rounded"
+                >
+                  <div
+                    class="position-relative bg-primary rounded-circle"
+                    style="width: 40px; height: 40px"
+                  >
+                    <span
+                      class="position-absolute top-50 start-50 translate-middle"
+                      ><i class="bi bi-mortarboard-fill text-white"></i
+                    ></span>
+                  </div>
+
+                  <div class="d-flex flex-column">
+                    <p class="mb-0 fw-semibold">Learning Daily</p>
+                    <p class="mb-0 fw-6 text-muted">
+                      Continuos growth and skill development
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     
 
     <script
