--- a/Bootsrap Tutorial/index.html
+++ b/Bootsrap Tutorial/index.html
@@ -43,111 +43,121 @@
     </section>
 
     <!-- Image and About me -->
-    <section class="my-5">
-      <div class="container">
-        <div class="row gy-5 justify-content-center">
-          <div class="col-10 col-md-4 bg-white py-3 rounded-4 shadow-sm">
-            <div
-              class="d-flex flex-column justify-content-center align-items-center text-center"
-            >
-              <div
-                class="d-flex justify-content-center align-items-center gap-2 mb-2"
-              >
-                <span class="text-primary"
-                  ><i class="bi bi-person-circle fs-4"></i
-                ></span>
-                <p class="fw-semibold mb-0 fs-3">My Pretty Face</p>
-              </div>
 
-              <div style="max-width: 300px">
-                <img
-                  class="img-fluid rounded"
-                  src="./assets/pic.jpg"
-                  alt="Profile photo"
-                />
-              </div>
+    <section class="my-5">
+      <div class="container d-flex justify-content-center bg-success">
+        <!-- Flex container -->
+        <div
+          class="d-flex flex-column flex-lg-row justify-content-center align-items-stretch gap-4 w-100"
+          style="max-width: 1200px"
+        >
+          <!-- Profile Card -->
+          <div
+            class="bg-white py-3 rounded-4 shadow-sm flex-fill d-flex flex-column justify-content-center align-items-center text-center"
+            style="max-width: 600px"
+          >
+            <div
+              class="d-flex justify-content-center align-items-center gap-2 mb-2"
+            >
+              <span class="text-primary">
+                <i class="bi bi-person-circle fs-4"></i>
+              </span>
+              <p class="fw-semibold mb-0 fs-3">My Pretty Face</p>
+            </div>
+
+            <div style="max-width: 500px">
+              <img
+                class="img-fluid rounded"
+                src="./assets/pic.jpg"
+                alt="Profile photo"
+              />
             </div>
           </div>
+
+          <!-- About Me Card -->
           <div
-            class="col-10 col-md-4 offset-md-1 bg-white py-3 rounded-4 shadow-sm"
+            class="bg-white py-3 rounded-4 shadow-sm flex-fill d-flex flex-column justify-content-start"
+            style="max-width: 600px"
           >
-            <!-- About me  -->
+            <!-- About Me Header -->
             <div class="d-flex align-items-center gap-2 mb-2">
-              <span class="text-primary"
-                ><i class="bi bi-person-raised-hand fs-4"></i
-              ></span>
+              <span class="text-primary">
+                <i class="bi bi-person-raised-hand fs-4"></i>
+              </span>
               <p class="fw-semibold fs-3 mb-0">About Me</p>
             </div>
 
             <!-- I love these -->
-            <div class="d-flex flex-column gap-2">
-              <div class="d-flex flex-column gap-3">
+            <div class="d-flex flex-column gap-3">
+              <!-- I love code -->
+              <div
+                class="d-flex gap-2 align-items-center p-2 bg-light border border-secondary border-opacity-10 rounded"
+                style="width: 95%"
+              >
                 <div
-                  style="width: 95%"
-                  class="d-flex gap-2 align-items-center p-2 bg-light border border-secondary border-opacity-10 rounded"
+                  class="position-relative bg-primary rounded-circle"
+                  style="width: 40px; height: 40px"
                 >
-                  <div
-                    class="position-relative bg-primary rounded-circle"
-                    style="width: 40px; height: 40px"
+                  <span
+                    class="position-absolute top-50 start-50 translate-middle"
                   >
-                    <span
-                      class="position-absolute top-50 start-50 translate-middle"
-                      ><i class="bi bi-code-slash text-white"></i
-                    ></span>
-                  </div>
+                    <i class="bi bi-code-slash text-white"></i>
+                  </span>
+                </div>
 
-                  <div class="d-flex flex-column">
-                    <p class="mb-0 fw-semibold">I love Code</p>
-                    <p class="mb-0 fw-6 text-muted">
-                      Passionate about creating elegant solutions
-                    </p>
-                  </div>
+                <div class="d-flex flex-column">
+                  <p class="mb-0 fw-semibold">I love Code</p>
+                  <p class="mb-0 fw-6 text-muted">
+                    Passionate about creating elegant solutions
+                  </p>
                 </div>
               </div>
-              <div class="d-flex flex-column gap-3">
-                <div
-                  style="width: 95%"
-                  class="d-flex gap-2 align-items-center p-2 bg-light border border-secondary border-opacity-10 rounded"
-                >
-                  <div
-                    class="position-relative bg-success rounded-circle"
-                    style="width: 40px; height: 40px"
-                  >
-                    <span
-                      class="position-absolute top-50 start-50 translate-middle"
-                      ><i class="bi bi-rocket-takeoff-fill text-white"></i
-                    ></span>
-                  </div>
 
-                  <div class="d-flex flex-column">
-                    <p class="mb-0 fw-semibold">Building Dreams</p>
-                    <p class="mb-0 fw-6 text-muted">
-                      Turning ideas into reality through technology
-                    </p>
-                  </div>
+              <!-- Building dreams -->
+              <div
+                class="d-flex gap-2 align-items-center p-2 bg-light border border-secondary border-opacity-10 rounded"
+                style="width: 95%"
+              >
+                <div
+                  class="position-relative bg-success rounded-circle"
+                  style="width: 40px; height: 40px"
+                >
+                  <span
+                    class="position-absolute top-50 start-50 translate-middle"
+                  >
+                    <i class="bi bi-rocket-takeoff-fill text-white"></i>
+                  </span>
+                </div>
+
+                <div class="d-flex flex-column">
+                  <p class="mb-0 fw-semibold">Building Dreams</p>
+                  <p class="mb-0 fw-6 text-muted">
+                    Turning ideas into reality through technology
+                  </p>
                 </div>
               </div>
-              <div class="d-flex flex-column gap-3">
-                <div
-                  style="width: 95%"
-                  class="d-flex gap-2 align-items-center p-2 bg-light border border-secondary border-opacity-10 rounded"
-                >
-                  <div
-                    class="position-relative bg-primary rounded-circle"
-                    style="width: 40px; height: 40px"
-                  >
-                    <span
-                      class="position-absolute top-50 start-50 translate-middle"
-                      ><i class="bi bi-mortarboard-fill text-white"></i
-                    ></span>
-                  </div>
 
-                  <div class="d-flex flex-column">
-                    <p class="mb-0 fw-semibold">Learning Daily</p>
-                    <p class="mb-0 fw-6 text-muted">
-                      Continuos growth and skill development
-                    </p>
-                  </div>
+              <!-- Learning Daily -->
+              <div
+                class="d-flex gap-2 align-items-center p-2 bg-light border border-secondary border-opacity-10 rounded"
+                style="width: 95%"
+              >
+                <div
+                  class="position-relative bg-primary rounded-circle"
+                  style="width: 40px; height: 40px"
+                >
+                  <span
+                    class="position-absolute top-50 start-50 translate-middle"
+                  >
+                    <i class="bi bi-mortarboard-fill text-white"></i>
+                  </span>
+                </div>
+
+                <div class="d-flex flex-column">
+                  <p class="mb-0 fw-semibold">Learning Daily</p>
+                  <p class="mb-0 fw-6 text-muted">
+                    Continuous growth and skill development
+                  </p>
                 </div>
               </div>
             </div>
@@ -155,8 +165,6 @@
         </div>
       </div>
     </section>
-
-    
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
