--- a/Bootsrap Tutorial/index.html
+++ b/Bootsrap Tutorial/index.html
@@ -176,7 +176,7 @@
     </section>
 
     <section
-      class="container my-5 d-flex justify-content-center align-items-center"
+      class="container-fluid my-5 d-flex justify-content-center align-items-center"
     >
       <div
         class="d-flex flex-column flex-lg-row justify-content-center align-items-center align-items-lg-stretch gap-4"
@@ -184,7 +184,7 @@
         <!-- Profile Card -->
         <div
           class="card shadow-sm flex-fill text-center p-4 border-0"
-          style="width: 90%; max-width: 800px"
+          style="width: 98%"
           data-aos="fade-up"
         >
           <div
@@ -193,7 +193,7 @@
             <span class="text-primary">
               <i class="bi bi-person-circle fs-4"></i>
             </span>
-            <h5 class="fw-semibold mb-0">My Pretty Face</h5>
+            <h5 class="fw-semibold fs-3 mb-0">My Pretty Face</h5>
           </div>
           <img
             src="./assets/pic.jpg"
@@ -204,8 +204,8 @@
 
         <!-- About Me Card -->
         <div
-          class="card shadow-sm flex-fill border-0"
-          style="width: 90%; max-width: 800px"
+          class="card shadow-sm flex-fill border-0 p-4"
+          style="width: 98%"
           data-aos="fade-up"
         >
           <div
@@ -214,7 +214,7 @@
             <span class="text-primary">
               <i class="bi bi-person-raised-hand fs-4"></i>
             </span>
-            <h5 class="fw-semibold mb-0">About Me</h5>
+            <h5 class="fw-semibold mb-0 fs-3">About Me</h5>
           </div>
 
           <div class="card-body d-flex flex-column gap-3">
@@ -271,14 +271,14 @@
     </section>
 
     <section
-      class="container my-5 d-flex justify-content-center align-items-center bg-success"
+      class="container my-5 d-flex justify-content-center align-items-center"
     >
       <!-- Flex Container  -->
       <div
-        class="d-flex flex-column flex-lg-row justify-content-center align-items-center align-items-lg-stretch"
+        class="d-flex flex-column flex-lg-row justify-content-center align-items-center align-items-lg-stretch gap-4"
       >
         <!-- First Card  -->
-        <div class="card">
+        <div class="card" style="width: 90%; max-width: 800px">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">
@@ -290,11 +290,16 @@
               <small class="text-body-secondary">Last updated 3 mins ago</small>
             </p>
           </div>
-          <img src="./assets/setup.jpg" class="card-img-bottom" alt="..." />
+          <img
+            src="./assets/setup.jpg"
+            class="card-img-bottom"
+            alt="..."
+            style="height: 100%"
+          />
         </div>
 
         <!-- Second Card  -->
-        <div class="card">
+        <div class="card" style="width: 90%; max-width: 800px">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">
@@ -306,7 +311,12 @@
               <small class="text-body-secondary">Last updated 3 mins ago</small>
             </p>
           </div>
-          <img src="./assets/code.jpg" class="card-img-bottom" alt="..." />
+          <img
+            src="./assets/code.jpg"
+            class="card-img-bottom"
+            alt="..."
+            style="height: 100%"
+          />
         </div>
       </div>
     </section>
