--- a/Bootsrap Tutorial/SummerSchool/register.html
+++ b/Bootsrap Tutorial/SummerSchool/register.html
@@ -23,7 +23,7 @@
     >
       <div class="container d-flex align-items-center justify-content-center">
         <div class="align-items-center w-100" style="max-width: 700px"">
-        <a href="/SummerSchool/index.html" class="btn btn-outline-success">
+        <a href="./index.html" class="btn btn-outline-success">
           <i class="bi bi-arrow-left"></i><span class="ms-1">Back To Home</span>
         </a>
         <div class="card border-success border-opacity-25 my-3">
@@ -107,10 +107,7 @@
                   Submit Registration
                 </button>
 
-                <a
-                  class="btn btn-secondary w-100"
-                  href="/SummerSchool/index.html"
-                >
+                <a class="btn btn-secondary w-100" href="./index.html">
                   Cancel
                 </a>
               </form>
