--- a/Bootsrap Tutorial/SummerSchool/index.html
+++ b/Bootsrap Tutorial/SummerSchool/index.html
@@ -14,59 +14,72 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div
       class="container d-flex align-items-center justify-content-center"
       style="min-height: 100vh"
     >
-      <div class="container  d-flex align-items-center justify-content-center ">
+      <div class="container d-flex align-items-center justify-content-center">
         <div class="row g-4 align-items-center" style="max-width: 1000px"">
-          <!-- Header Section  -->
-          <div
-            class="col-12 text-center d-flex flex-column gap-2 justify-content-center align-items-center justify-content-center"
-          >
-            <img
-              src="./assets/KNUST_Logo.png"
-              alt="KNUST LOGO"
-              style="width: 50px"
-            />
-            <h1 class="fw-bold text-success">11th KNUST Summer School</h1>
-            <p class="text-muted fs-4">Registration Portal</p>
-          </div>
+        <!-- Header Section  -->
+        <div
+          class="col-12 text-center d-flex flex-column gap-2 justify-content-center align-items-center justify-content-center"
+        >
+          <img
+            src="./assets/KNUST_Logo.png"
+            alt="KNUST LOGO"
+            style="width: 50px"
+          />
+          <h1 class="fw-bold text-success">11th KNUST Summer School</h1>
+          <p class="text-muted fs-4">Registration Portal</p>
+        </div>
 
-          <!-- staff  -->
-          <div class="col-md-6">
-            <div class="card border-success border-opacity-10 mb-3">
-              <div class="card-body d-flex flex-column align-items-center justify-content-center gap-1">
-                <div class="position-relative rounded-circle" style="width: 65px; height: 65px; background-color: #5790411a;">
-                  <i class="bi bi-person-check fs-1 position-absolute top-50 start-50 translate-middle text-success"></i>
-                </div>
-                <h5 class="card-title mt-1">KNUST Staff</h5>
-                <p class="card-text text-muted">
-                  Login with your credentials
-                </p>
-                
-                <a href="/SummerSchool/login.html" class="btn btn-success w-100">Proceed To Login</a>
+        <!-- staff  -->
+        <div class="col-md-6">
+          <div class="card border-success border-opacity-10 mb-3">
+            <div
+              class="card-body d-flex flex-column align-items-center justify-content-center gap-1"
+            >
+              <div
+                class="position-relative rounded-circle"
+                style="width: 65px; height: 65px; background-color: #5790411a"
+              >
+                <i
+                  class="bi bi-person-check fs-1 position-absolute top-50 start-50 translate-middle text-success"
+                ></i>
               </div>
+              <h5 class="card-title mt-1">KNUST Staff</h5>
+              <p class="card-text text-muted">Login with your credentials</p>
+
+              <a href="./login.html" class="btn btn-success w-100"
+                >Proceed To Login</a
+              >
             </div>
           </div>
+        </div>
 
-          <!-- external  -->
-           <div class="col-md-6">
-            <div class="card border-success border-opacity-10 mb-3">
-              <div class="card-body d-flex flex-column align-items-center justify-content-center gap-1">
-                <div class="position-relative rounded-circle" style="width: 65px; height: 65px; background-color: #5790411a;">
-                  <i class="bi bi-people fs-1 position-absolute top-50 start-50 translate-middle text-success"></i>
-                </div>
-                <h5 class="card-title mt-1">Guest/External</h5>
-                <p class="card-text text-muted">
-                  Register for the summer school
-                </p>
-                
-                <a href="/SummerSchool/register.html" class="btn btn-warning w-100">Proceed To Register</a>
+        <!-- external  -->
+        <div class="col-md-6">
+          <div class="card border-success border-opacity-10 mb-3">
+            <div
+              class="card-body d-flex flex-column align-items-center justify-content-center gap-1"
+            >
+              <div
+                class="position-relative rounded-circle"
+                style="width: 65px; height: 65px; background-color: #5790411a"
+              >
+                <i
+                  class="bi bi-people fs-1 position-absolute top-50 start-50 translate-middle text-success"
+                ></i>
               </div>
+              <h5 class="card-title mt-1">Guest/External</h5>
+              <p class="card-text text-muted">Register for the summer school</p>
+
+              <a href="./register.html" class="btn btn-warning w-100"
+                >Proceed To Register</a
+              >
             </div>
           </div>
         </div>
