--- a/Bootsrap Tutorial/SummerSchool/login.html
+++ b/Bootsrap Tutorial/SummerSchool/login.html
@@ -23,7 +23,7 @@
     >
       <div class="container d-flex align-items-center justify-content-center">
         <div class="align-items-center w-100" style="max-width: 400px"">
-        <a href="/SummerSchool/index.html" class="btn btn-outline-success">
+        <a href="./index.html" class="btn btn-outline-success">
           <i class="bi bi-arrow-left"></i><span class="ms-1">Back To Home</span>
         </a>
         <div class="card border-success border-opacity-25 my-3">
