Enhance form labels with strong emphasis and update section title for clarity

--- a/Bootsrap Tutorial/Recommendation Portal/index.html
+++ b/Bootsrap Tutorial/Recommendation Portal/index.html
@@ -255,7 +255,7 @@
                     id="mot-a"
                   />
                   <label class="form-check-label" for="mot-a">
-                    a. Below Average
+                    <strong>a.</strong> Below Average
                   </label>
                 </div>
 
@@ -267,7 +267,7 @@
                     id="mot-b"
                   />
                   <label class="form-check-label" for="mot-b">
-                    b. Average
+                    <strong>b.</strong> Average
                   </label>
                 </div>
 
@@ -279,7 +279,7 @@
                     id="mot-c"
                   />
                   <label class="form-check-label" for="mot-c">
-                    c. Above Average
+                    <strong>c.</strong> Above Average
                   </label>
                 </div>
 
@@ -291,7 +291,7 @@
                     id="mot-d"
                   />
                   <label class="form-check-label" for="mot-d">
-                    d. Excellent
+                    <strong>d.</strong> Excellent
                   </label>
                 </div>
 
@@ -303,14 +303,14 @@
                     id="mot-e"
                   />
                   <label class="form-check-label" for="mot-e">
-                    e. Unable to Judge
+                    <strong>e.</strong> Unable to Judge
                   </label>
                 </div>
               </div>
             </div>
 
             <div class="col-md-6 mb-3">
-              <h5 class="h6">Motivation</h5>
+              <h5 class="h6">Critical Thinking</h5>
 
               <div class="custom-radio-list">
                 <div class="form-check custom-radio-item">
@@ -318,10 +318,10 @@
                     type="radio"
                     class="visually-hidden"
                     name="motivationRatingb"
-                    id="mot-f"
+                    id="crit-a"
                   />
-                  <label class="form-check-label" for="mot-f">
-                    a. Below Average
+                  <label class="form-check-label" for="crit-a">
+                    <strong>a.</strong> Below Average
                   </label>
                 </div>
 
@@ -330,10 +330,10 @@
                     type="radio"
                     class="visually-hidden"
                     name="motivationRatingb"
-                    id="mot-g"
+                    id="crit-b"
                   />
-                  <label class="form-check-label" for="mot-g">
-                    b. Average
+                  <label class="form-check-label" for="crit-b">
+                    <strong>b.</strong> Average
                   </label>
                 </div>
 
@@ -342,10 +342,10 @@
                     type="radio"
                     class="visually-hidden"
                     name="motivationRatingb"
-                    id="mot-h"
+                    id="crit-c"
                   />
-                  <label class="form-check-label" for="mot-h">
-                    c. Above Average
+                  <label class="form-check-label" for="crit-c">
+                    <strong>c.</strong> Above Average
                   </label>
                 </div>
 
@@ -354,10 +354,10 @@
                     type="radio"
                     class="visually-hidden"
                     name="motivationRatingb"
-                    id="mot-i"
+                    id="crit-d"
                   />
-                  <label class="form-check-label" for="mot-i">
-                    d. Excellent
+                  <label class="form-check-label" for="crit-d">
+                    <strong>d.</strong> Excellent
                   </label>
                 </div>
 
@@ -366,10 +366,10 @@
                     type="radio"
                     class="visually-hidden"
                     name="motivationRatingb"
-                    id="mot-j"
+                    id="crit-e"
                   />
-                  <label class="form-check-label" for="mot-j">
-                    e. Unable to Judge
+                  <label class="form-check-label" for="crit-e">
+                    <strong>e.</strong> Unable to Judge
                   </label>
                 </div>
               </div>
