--- a/Bootsrap Tutorial/SummerSchool/index.html
+++ b/Bootsrap Tutorial/SummerSchool/index.html
@@ -25,7 +25,7 @@
         <div class="row g-4 align-items-center" style="max-width: 1000px"">
         <!-- Header Section  -->
         <div
-          class="col-12 text-center d-flex flex-column gap-2 justify-content-center align-items-center justify-content-center"
+          class="col-12 text-center d-flex flex-column gap-2 justify-content-center align-items-center justify-content-center mt-5 mt-lg-0"
         >
           <img
             src="./assets/KNUST_Logo.png"
