Add buttons for cancel, save draft, and submit in recommendation form

--- a/Bootsrap Tutorial/Recommendation Portal/index.html
+++ b/Bootsrap Tutorial/Recommendation Portal/index.html
@@ -28,7 +28,7 @@
             class="me-2"
           />
           <div class="text-success">
-            <span class="d-block" style="font-size: 1rem; line-height: 1.1">
+            <span class="d-block fs-6" style="line-height: 1.1">
               KWAME NKRUMAH UNIVERSITY OF SCIENCE AND TECHNOLOGY
             </span>
             <span class="d-block fw-bold fs-5"> RECOMMENDATION PORTAL </span>
@@ -887,6 +887,24 @@
               <strong>Mr. PIUS DEBRAH</strong> agree that the information
               provided is complete and accurate...
             </label>
+          </div>
+          <div
+            class="d-flex justify-content-between flex-column flex-md-row gap-1"
+          >
+            <div>
+              <div class="btn btn-outline-warning">
+                <i class="bi bi-x"></i>
+                <span>Cancel</span>
+              </div>
+              <div class="btn btn-outline-secondary">
+                <i class="bi bi-floppy2"></i>
+                <span>Save as draft</span>
+              </div>
+            </div>
+            <button class="btn btn-success" type="submit">
+              <span>Submit Recommendation</span>
+              <i class="bi bi-arrow-right"></i>
+            </button>
           </div>
         </div>
       </div>
